Allow release from *-RELEASE tags

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ java-deploy:
   stage: deploy
   only:
     - master
+    - /^.*-RELEASE$/
   script:
     - mvn deploy -Dmaven.test.skip=true
     - mvn deploy -P!attach-sources,update-dev -Dmaven.test.skip=true
