--- a/simpleclient_spring_boot/pom.xml
+++ b/simpleclient_spring_boot/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.prometheus</groupId>
+        <groupId>com.riag.prometheus</groupId>
         <artifactId>parent</artifactId>
         <version>0.9.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.prometheus</groupId>
+    <groupId>com.riag.prometheus</groupId>
     <artifactId>simpleclient_spring_boot</artifactId>
     <packaging>bundle</packaging>
 
@@ -50,17 +50,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient_common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-          <groupId>io.prometheus</groupId>
+          <groupId>com.riag.prometheus</groupId>
           <artifactId>simpleclient_spring_web</artifactId>
           <version>${project.version}</version>
         </dependency>
