--- a/simpleclient_spring_web/pom.xml
+++ b/simpleclient_spring_web/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.prometheus</groupId>
+        <groupId>com.riag.prometheus</groupId>
         <artifactId>parent</artifactId>
         <version>0.9.1-SNAPSHOT</version>
     </parent>
@@ -49,12 +49,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient_common</artifactId>
             <version>${project.version}</version>
         </dependency>
