--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.prometheus</groupId>
+        <groupId>com.riag.prometheus</groupId>
         <artifactId>parent</artifactId>
         <version>0.9.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.prometheus</groupId>
+    <groupId>com.riag.prometheus</groupId>
     <artifactId>benchmarks</artifactId>
 
     <name>Prometheus Java Client Benchmarks</name>
@@ -47,7 +47,7 @@
             <version>0.0.10</version>
         </dependency>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
             <version>${project.version}</version>
         </dependency>
