--- a/simpleclient_hotspot/pom.xml
+++ b/simpleclient_hotspot/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.prometheus</groupId>
+        <groupId>com.riag.prometheus</groupId>
         <artifactId>parent</artifactId>
         <version>0.9.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>io.prometheus</groupId>
+    <groupId>com.riag.prometheus</groupId>
     <artifactId>simpleclient_hotspot</artifactId>
     <packaging>bundle</packaging>
 
@@ -35,14 +35,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient</artifactId>
             <version>${project.version}</version>
         </dependency>
         
         <!-- Test Dependencies Follow -->
         <dependency>
-            <groupId>io.prometheus</groupId>
+            <groupId>com.riag.prometheus</groupId>
             <artifactId>simpleclient_servlet</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
